--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
 body {
+      nav {
+    list-style-type: none; 
+    position: fixed; 
+    background-color: #D8CFAF;
+    width: 100vw;
+    top: 0;
+    left: 0;
+    padding: 10px;
+  }
+li{display: inline;
+padding: 8px; 
+}
+h1 {
+  font-family: system-ui;
+  font-size: 70px; 
+  color: black;
+  text-align: center;
+}
+ <center>
+img {width: 25%
+  border: dashed black 7px:
+}
+
+p {
+  text-decoration-line: overline underline;
+  text-decoration-color: purple;
+}
+body {
+  background-color: #E6B89C
+}
+
+img {
+  width: 30%; 
+  border: dotted black 7px;
 
 }
