--- a/style.css
+++ b/style.css
@@ -21,7 +21,9 @@ li{
   display: inline;
 padding: 8px; 
 }
-
+a: hover {
+  background-color: hot pink; 
+}
  <center>
 img {width: 25%
   border: dashed black 7px:
