--- a/style.css
+++ b/style.css
@@ -39,3 +39,23 @@ img {
   border: dotted black 7px;
 
 }
+    img {
+  width: 30%; 
+  border: dotted black 7px;
+}
+
+ <center>
+img {width: 25%
+  border: dashed black 7px:
+}
+
+p {
+  text-decoration-line: overline underline;
+  text-decoration-color: purple;
+}
+
+ 
+  a {
+    text-decoration: none; 
+    color: black; 
+  }
