--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1 {
   text-align: center;
 }
 body {
-  background-color: #E6B89C
+  background-color: #E6B89C;
 }
 nav {
     list-style-type: none; 
@@ -24,8 +24,6 @@ padding: 190px;
 a:hover {
   background-color: hot pink; 
 }
- <center>
-
 
 
 img {
